<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="supabase_url" translatable="false">https://trxlhebshkdlbvpuwqyd.supabase.co</string>
    <string name="supabase_key" translatable="false">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRyeGxoZWJzaGtkbGJ2cHV3cXlkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzM1NzY3MDcsImV4cCI6MjA0OTE1MjcwN30.TrVuytaXGx1S_Ju7TSyxE2wQlBCN1k5_yXmsQz_l7Dc</string>
    <string name="app_name">Collecto</string>
    <string name="login_to_account">Log in to your account</string>
    <string name="enter_your_credentials_to_sign_in">Enter your credentials to log in</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_hing">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create account</string>
    <string name="enter_your_credentials_to_sign_up">Enter your credentials to sign up</string>
    <string name="username_hint">Username</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email_confirmation">Email verification</string>
    <string name="confirm_your_email">Confirm your email</string>
    <string name="code_sent">Enter the code sent to your email</string>
    <string name="confirmation_code_hint">Verification code</string>
    <string name="didn_t_get_a_verification_code">Didn\'t get a verification code?</string>
    <string name="submit">Submit</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="password_recovery">Password recovery</string>
    <string name="enter_data_to_receive_verification_code">Enter email to receive verification code</string>
    <string name="enter_verification_code_and_new_password">Enter verification code and new password</string>
    <string name="new_password_hint">New password</string>
    <string name="password_mismatch_error">Passwords do not match</string>
    <string name="password_min_length_error">Password must be at least 8 characters long</string>
    <string name="password_max_length_error">Password must not be longer than 16 characters</string>
    <string name="password_lowercase_error">Password must contain lowercase letters</string>
    <string name="password_uppercase_error">Password must contain capital letters</string>
    <string name="password_digit_error">Password must contain at least one number</string>
    <string name="password_special_char_error">Password must contain special character</string>
    <string name="invalid_email_error">Invalid email address</string>
    <string name="username_length_error">Length must be between 5 and 25 characters</string>
    <string name="username_special_char_error">Username must not contain special characters</string>
    <string name="email_already_exists">This email is already in use</string>
    <string name="username_already_exists">This username is already in use</string>
    <string name="wrong_code_error">Incorrect verification code</string>
    <string name="password_sent">A new verification code has been sent to your email</string>
    <string name="successful_registration">Your account has been successfully registered</string>
    <string name="successful_authentication">Login to your account was successful</string>
    <string name="wrong_email_or_password">Incorrect email or password entered</string>
    <string name="unsuccessful_registration">Something went wrong. The account was not registered</string>
    <string name="successful_reset">Password change was successful</string>
    <string name="unsuccessful_reset">Something is wrong, the password was not changed</string>
    <string name="settings">App settings</string>
    <string name="language">Language</string>
    <string name="theme">Day / night theme</string>
    <string name="reset_password">Change password</string>
    <string name="log_out">Log out</string>
    <string name="your_collections_header">Your collections</string>
    <string name="settings_short">Application Settings</string>
    <string name="add_collection">Add new collection</string>
    <string name="add_item">Add new item</string>
    <string name="old_password">The new password matches the old one</string>
    <string name="new_code_sent">Within 1 minute a new confirmation code will be sent to your email. Please change your password and try again.</string>
    <string name="successful_user_change">Your username has been successfully changed</string>
    <string name="unsuccessful_user_change">Something went wrong, the username was not changed</string>
    <string name="name_input_text">Name: </string>
    <string name="description_input_text">Description of the collection: </string>
    <string name="enter_collection_name">enter collection name</string>
    <string name="enter_description">enter a very interesting description</string>
    <string name="new_field">New field</string>
    <string name="fields_of_the_collection">Fields of the collection</string>
    <string name="empty">Such empty…</string>
    <string name="choose_from_gallery">From the gallery</string>
    <string name="choose_from_storage">From the local storage</string>
    <string name="choose_image_source">Choose the image source:</string>
    <string name="successful_add_collection">Collection added successfully</string>
    <string name="wrong_name_length">Incorrect text field length</string>
    <string name="wrong_amount_of_fields">Too many fields added</string>
    <string name="unsuccessful_add_collection">Something went wrong, the collection was not added</string>
    <string name="identical_fields">There cannot be fields with the same name!</string>
    <string name="delete_avatar">Delete avatar</string>
    <string name="upload_avatar">Select a new avatar</string>
    <string name="choose_action">What do you want to do?</string>
    <string name="successful_avatar_change">Avatar successfully changed</string>
    <string name="unsuccessful_avatar_change">Something went wrong, avatar not changed</string>
    <string name="search_collection_hint">Search collection by name</string>
    <string name="search_collection_order">Order by </string>
    <string name="edit_collection">Edit collection</string>
    <string name="delete_collection">Delete collection</string>
    <string name="order_by_name">name</string>
    <string name="order_by_amount_of_elements">amount of elements</string>
    <string name="items_of_the_collection">Items in the collection:</string>
    <string name="update_collection">Update collection</string>
    <string name="successful_modify_collection">Collection modified successfully</string>
    <string name="unsuccessful_modify_collection">Something went wrong, the collection was not modified</string>
    <string name="enter_item_name">enter item name</string>
    <string name="description_item_input_text">"Description of the item: "</string>
    <string name="collection_name_text">Collection: </string>
    <string name="item_name_input_text">Item name: </string>
    <string name="enter_field">Enter text here </string>
    <string name="delete_text">Deleting a collection</string>
    <string name="delete_question">This action cannot be undone and the collection cannot be returned. Are you sure you want to delete this collection?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsuccessful_add_item">Something went wrong, the item was not added</string>
    <string name="successful_add_item">Item added successfully</string>
    <string name="search_hint">Search</string>
    <string name="edit_item">Edit item</string>
    <string name="delete_item">Delete item</string>
    <string name="empty_description">No description.</string>
    <string name="update_item">Modify item</string>
</resources>